--- a/package.json
+++ b/package.json
@@ -29,12 +29,12 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.29.0",
     "lucide-react": "^0.563.0",
-    "next": "15.1.6",
+    "next": "^16.1.6",
     "next-intl": "^4.8.0",
     "openai": "^6.16.0",
     "prisma": "^6.19.2",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
